2001-07-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-make-help-echo): For FSF Emacs 21, specify the third
	argument of `get-text-property' where the buffer is to be checked;
	for XEmacs, make it not to work if the buffer is not focused.
	(w3m-make-balloon-help): Make it not to work if the buffer is not
	focused.

2001-07-27  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-parse-forms): Fixed for initial value in the
	textarea.

2001-07-27  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-form.el (w3m-form-input-textarea-exit): New function.
	(w3m-form-input-select-exit): Ditto.
	(w3m-form-input-map-exit): Ditt.
	(w3m-form-input-textarea-keymap): Add key for 'exit'.
	(w3m-form-input-select-keymap): Ditto.
	(w3m-form-input-map-keymap): Ditto.
	(w3m-form-input-textarea-mode): Modify doc-string.
	(w3m-form-input-select-mode): Ditto.
	(w3m-form-input-map-mode): Ditto.
	(w3m-form-input-select-set-mouse): Add doc-string.
	(w3m-form-input-map-set-mouse): Ditto.

2001-07-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-x-moe-decode-buffer): Use 'w3m-coding-system'
	instead of 'euc-jp.
	(w3m-w32-browser-with-fiber): Ignore process output.

	* w3m-form.el (w3m-form-mouse-face): New user option.
	(w3m-form-input-select): Add mouse-face.
	(w3m-form-input-map): Ditto.

	* mew-w3m.el (toplevel): Require 'cl, when byte-compile.
	(mew-mime-text/html-w3m): Guess charset with the use of the Mew's
	funcion and use its charset, if executed a combination of Mew
	Ver.2 and w3m-m17n.

2001-07-25  NAKAGAWA Takayuki  <tknakaga@kanagawa.hitachi.co.jp>

	* w3m.el (w3m-fontify-anchors): Don't delete trailing whitespaces,
	etc. from anchors.

2001-07-23  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-asahi.el (shimbun-asahi-groups): Added "culture".
	* shimbun/sb-asahi-html.el (shimbun-asahi-html-groups): Ditto.

2001-07-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-form.el (w3m-form-parse-forms): Support the USEMAP attribute
	of the IMG element.