@@ -1,3 +1,8 @@
+2001-07-31  Yuuichi Teranishi  <teranisi@gohome.org>
+
+	* w3m.el (w3m-w3m-retrieve): Make a temporary file for POST;
+	Use -header option to specify Content-Type: field.
+
 2001-07-27  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-make-help-echo): For FSF Emacs 21, specify the third
